Fixed horizontal overflow of entire backend layout

--- a/laterpay/asset_sources/scss/objects/_backend_layout.scss
+++ b/laterpay/asset_sources/scss/objects/_backend_layout.scss
@@ -5,6 +5,7 @@
 
 .lp_pagewrap {
     max-width: $fs * 88;
+    overflow-x: hidden;
     padding: $fs;
 }
 
